--- a/educationBusiness.html
+++ b/educationBusiness.html
@@ -40,17 +40,14 @@
           <div class="col-3 header-top-info">
             <ul class="header-two-phone header-cont">
               <li style="text-align: center">
-                <a href="tel:0974644964"
-                  ><i class="fas fa-phone"></i> 0974.644.964</a
-                >
+                <a href="tel:0974644964"><i class="fas fa-phone"></i> 0974.644.964</a>
               </li>
             </ul>
           </div>
           <div class="col-3 header-top-info">
             <ul class="header-two-adr header-cont">
               <li>
-                <a href="contacts.html"
-                  ><i class="fas fa-map-marker-alt"></i>Pearl Plaza
+                <a href="contacts.html"><i class="fas fa-map-marker-alt"></i>Pearl Plaza
                   Building,<br />
                   Binh Thanh District, HCM City
                 </a>
@@ -74,11 +71,11 @@
                 </li>
                 <li><a href="index.html#trainingHouse" class='text-center'>Đào tạo Doanh Nghiệp</a></li>
                 <li><a href="seminor.html" class='text-center'>Hội thảo</a></li>
-                <li><a href="educationBusiness.html" class='text-center'>Tư vấn  Doanh Nghiệp</a></li>
+                <li><a href="educationBusiness.html" class='text-center'>Tư vấn Doanh Nghiệp</a></li>
                 <li><a href="CSKH.html" class='text-center'>Tư vấn CSKH </a></li>
                 <li><a href="XTTM.html" class='text-center'>Xúc tiến Thương mại</a></li>
-                <li><a href="TVTD.html" class='text-center w-110' >Tư vấn tuyển dụng</a></li>
-              
+                <li><a href="TVTD.html" class='text-center w-110'>Tư vấn tuyển dụng</a></li>
+
                 <li><a href="contacts.html">Liên hệ</a></li>
               </ul>
             </nav>
@@ -109,25 +106,38 @@
 
     <div class="container">
       <h2 class="title-line uppercase text-blue"><span class='home-title-1'>Tư vấn Doanh nghiệp </h2>
-      <br>
+      <div class="row">
+        <div class="col-md-6 col-12 pad-center text-center">
+          <img src="./assets/img/EduBusiness_01.jpg" class="img-eduBusiness" alt="">
 
-      <p>
-        Một doanh nghiệp phát triển bền vững cần xây dựng – triển khai - duy trì hệ thống và quy trình tiên tiến để
-        kaizen / cải thiện hiệu suất bên cạnh việc gìn giữ các giá trị cốt lõi.
-        Dịch vụ tư vấn doanh nghiệp của chúng tôi không chỉ hỗ trợ Doanh nghiệp về cung cấp các giải pháp xây dựng –
-        phát triển hệ thống và quy trình làm việc mà chúng tôi còn giúp khách hàng xây dựng phần “cốt lõi” của doanh
-        nghiệp, giúp gắn kết & giữ chân nhân tài đồng hành cùng sự phát triển của doanh nghiệp.
-        <br>
-        <br>
-        Với vai trò nhà tư vấn, chúng tôi cam kết -<span class='title uppercase text-blue'> SỰ PHÁT TRIỂN CỦA KHÁCH HÀNG
-          CHÍNH LÀ SỰ PHÁT TRIỂN CỦA CHÚNG TÔI.</span>
-        <br>
-        <br>
-        Chúng tôi có đội ngũ tư vấn viên hiểu biết sâu rộng về các lĩnh vực quản trị nguồn nhân lực, đặc biệt giao tiếp
-        lưu loát bằng tiếng Nhật, am hiểu văn hoá, phương thức làm việc, tư duy, v.v..v làm việc theo phong cách Nhật
-        Bản, cam kết luôn tận tụy với công việc tư vấn, nhằm mang lại thành công đến doanh nghiệp.
-        
-      </p>
+        </div>
+
+        <div class="col-md-6 col-12">
+          <p class="text-break">
+            Một doanh nghiệp phát triển bền vững cần xây dựng – triển khai - duy trì hệ thống và quy trình tiên tiến để
+            kaizen / cải thiện hiệu suất bên cạnh việc gìn giữ các giá trị cốt lõi.
+            Dịch vụ tư vấn doanh nghiệp của chúng tôi không chỉ hỗ trợ Doanh nghiệp về cung cấp các giải pháp xây dựng –
+            phát triển hệ thống và quy trình làm việc mà chúng tôi còn giúp khách hàng xây dựng phần “cốt lõi” của doanh
+            nghiệp, giúp gắn kết & giữ chân nhân tài đồng hành cùng sự phát triển của doanh nghiệp.
+            <br>
+            <br>
+            Với vai trò nhà tư vấn, chúng tôi cam kết -<span class='title uppercase text-blue'> SỰ PHÁT TRIỂN CỦA KHÁCH
+              HÀNG
+              CHÍNH LÀ SỰ PHÁT TRIỂN CỦA CHÚNG TÔI.</span>
+            <br>
+            <br>
+            Chúng tôi có đội ngũ tư vấn viên hiểu biết sâu rộng về các lĩnh vực quản trị nguồn nhân lực, đặc biệt giao
+            tiếp
+            lưu loát bằng tiếng Nhật, am hiểu văn hoá, phương thức làm việc, tư duy, v.v..v làm việc theo phong cách
+            Nhật
+            Bản, cam kết luôn tận tụy với công việc tư vấn, nhằm mang lại thành công đến doanh nghiệp.
+
+          </p>
+        </div>
+      </div>
+
+
+
       <br>
       <!-- <h6>Dịch vụ của chúng tôi: </h6>
       <ol>
@@ -254,9 +264,9 @@
           </div>
           <div class="col-8">
             <ul class="footer-menu">
-              <li><a href="seminor.html" >Hội thảo</a></li>
-              <li><a href="educationBusiness.html">Tư vấn  Doanh Nghiệp</a></li>
-              <li><a href="CSKH.html" >Tư vấn CSKH </a></li>
+              <li><a href="seminor.html">Hội thảo</a></li>
+              <li><a href="educationBusiness.html">Tư vấn Doanh Nghiệp</a></li>
+              <li><a href="CSKH.html">Tư vấn CSKH </a></li>
               <li><a href="XTTM.html">Xúc tiến Thương mại</a></li>
               <li><a href="contacts.html">Liên hệ</a></li>
             </ul>
