--- a/educationBusiness.html
+++ b/educationBusiness.html
@@ -113,7 +113,9 @@
         </div>
 
         <div class="col-md-6 col-12">
-          <p class="text-break">
+          <img src="./assets/img/EduBusiness_text.png" class="img-center" alt="">
+
+          <!-- <p class="text-break">
             Một doanh nghiệp phát triển bền vững cần xây dựng – triển khai - duy trì hệ thống và quy trình tiên tiến để
             kaizen / cải thiện hiệu suất bên cạnh việc gìn giữ các giá trị cốt lõi.
             Dịch vụ tư vấn doanh nghiệp của chúng tôi không chỉ hỗ trợ Doanh nghiệp về cung cấp các giải pháp xây dựng –
@@ -132,7 +134,7 @@
             Nhật
             Bản, cam kết luôn tận tụy với công việc tư vấn, nhằm mang lại thành công đến doanh nghiệp.
 
-          </p>
+          </p> -->
         </div>
       </div>
 
