--- a/CSKH.html
+++ b/CSKH.html
@@ -40,17 +40,14 @@
           <div class="col-3 header-top-info">
             <ul class="header-two-phone header-cont">
               <li style="text-align: center">
-                <a href="tel:0974644964"
-                  ><i class="fas fa-phone"></i> 0974.644.964</a
-                >
+                <a href="tel:0974644964"><i class="fas fa-phone"></i> 0974.644.964</a>
               </li>
             </ul>
           </div>
           <div class="col-3 header-top-info">
             <ul class="header-two-adr header-cont">
               <li>
-                <a href="contacts.html"
-                  ><i class="fas fa-map-marker-alt"></i>Pearl Plaza
+                <a href="contacts.html"><i class="fas fa-map-marker-alt"></i>Pearl Plaza
                   Building,<br />
                   Binh Thanh District, HCM City
                 </a>
@@ -74,11 +71,11 @@
                 </li>
                 <li><a href="index.html#trainingHouse" class='text-center'>Đào tạo Doanh Nghiệp</a></li>
                 <li><a href="seminor.html" class='text-center'>Hội thảo</a></li>
-                <li><a href="educationBusiness.html" class='text-center'>Tư vấn  Doanh Nghiệp</a></li>
+                <li><a href="educationBusiness.html" class='text-center'>Tư vấn Doanh Nghiệp</a></li>
                 <li><a href="CSKH.html" class='text-center'>Tư vấn CSKH </a></li>
                 <li><a href="XTTM.html" class='text-center'>Xúc tiến Thương mại</a></li>
-                <li><a href="TVTD.html" class='text-center w-110' >Tư vấn tuyển dụng</a></li>
-              
+                <li><a href="TVTD.html" class='text-center w-110'>Tư vấn tuyển dụng</a></li>
+
                 <li><a href="contacts.html">Liên hệ</a></li>
               </ul>
             </nav>
@@ -112,10 +109,19 @@
       <br>
 
       <p>
-        Ở Nhật Bản, “Omotenashi” nghĩa là đón tiếp Khách hàng bằng cả tấm lòng với tác phong, phong cách làm việc chuyên nghiệp đạt đến sự tinh tế. Đó là sự quan tâm bằng cả trái tim, luôn đặt mình vào vị trí vào Khách hàng, đứng trên quan điểm của Khách hàng, quan tâm và để ý đến TỪNG HÀNH VI NHỎ NHẤT và hành động TRƯỚC & NHANH, giúp Khách hàng luôn có trải nghiệm tuyệt vời với dịch vụ doanh nghiệp cung cấp, và trở thành Khách hàng thân thiết.
+        Ở Nhật Bản, “Omotenashi” nghĩa là đón tiếp Khách hàng bằng cả tấm lòng với tác phong, phong cách làm việc chuyên
+        nghiệp đạt đến sự tinh tế. Đó là sự quan tâm bằng cả trái tim, luôn đặt mình vào vị trí vào Khách hàng, đứng
+        trên quan điểm của Khách hàng, quan tâm và để ý đến <span class='text-blue'>TỪNG HÀNH VI NHỎ NHẤT</span> và hành
+        động <span class="text-blue">TRƯỚC & NHANH</span>, giúp Khách hàng luôn có trải nghiệm tuyệt vời với dịch vụ
+        doanh nghiệp cung cấp, và trở
+        thành Khách hàng thân thiết.
         <br>
         <br>
-        Với đội ngũ Trainer / Coach & tư vấn viên làm việc nhiều năm về chăm sóc Khách hàng, dịch vụ tại nhiều tập đoàn lớn Nhật Bản, chúng tôi am hiểu về các chuẩn mực, tinh thần dịch vụ Omotenashi. Qua đó, chúng tôi cam kết cung cấp các khoá tư vấn riêng biệt về dịch vụ Omotenashi chuẩn Nhật Bản, có sự điều chỉnh linh hoạt với chính sác dịch vụ chăm sóc dịch vụ Khách hàng của doanh nghiệp, với mục đích cuối cùng là cùng nhau nâng tầm dịch vụ chăm sóc Khách hàng của doanh nghiệp theo tinh thần Omotenashi.
+        Với đội ngũ Trainer / Coach & tư vấn viên làm việc nhiều năm về chăm sóc Khách hàng, dịch vụ tại nhiều tập đoàn
+        lớn Nhật Bản, chúng tôi am hiểu về các chuẩn mực, tinh thần dịch vụ Omotenashi. Qua đó, chúng tôi cam kết cung
+        cấp các khoá tư vấn riêng biệt về dịch vụ Omotenashi chuẩn Nhật Bản, có sự điều chỉnh linh hoạt với chính sác
+        dịch vụ chăm sóc dịch vụ Khách hàng của doanh nghiệp, với mục đích cuối cùng là cùng nhau nâng tầm dịch vụ chăm
+        sóc Khách hàng của doanh nghiệp theo tinh thần Omotenashi.
         <br>
         <br>
       </p>
@@ -232,9 +238,9 @@
           </div>
           <div class="col-8">
             <ul class="footer-menu">
-              <li><a href="seminor.html" >Hội thảo</a></li>
-              <li><a href="educationBusiness.html">Tư vấn  Doanh Nghiệp</a></li>
-              <li><a href="CSKH.html" >Tư vấn CSKH </a></li>
+              <li><a href="seminor.html">Hội thảo</a></li>
+              <li><a href="educationBusiness.html">Tư vấn Doanh Nghiệp</a></li>
+              <li><a href="CSKH.html">Tư vấn CSKH </a></li>
               <li><a href="XTTM.html">Xúc tiến Thương mại</a></li>
               <li><a href="contacts.html">Liên hệ</a></li>
             </ul>
