Update image and content

--- a/CSKH.html
+++ b/CSKH.html
@@ -106,29 +106,77 @@
 
     <div class="container">
       <h2 class="title-line uppercase text-blue"><span class='home-title-1'>Tư vấn dịch vụ<br> Chăm sóc khách hàng</h2>
+      <div class="row">
+        <div class="col-md-6 col-sm-12">
+          <img src="./assets/img/CSKH-bg.jpeg" alt="">
+        </div>
+        <div class="col-md-6 col-sm-12">
+          <img src="./assets/img/CSKH-content.png" alt="">
+        </div>
+      </div>
       <br>
+      <!-- <div class="img-center"><img src="./assets/img/CSKH.png" alt=""></div> -->
+      <h4 class="title-line">Thông qua cung cấp, chia sẻ những kiến thức, kỹ năng, kinh nghiệm thực tiễn & tư vấn thực
+        tiễn, dịch vụ của chúng tôi bao gồm: </h4>
+      <div class="row courses-cover">
 
-      <p>
-        Ở Nhật Bản, “Omotenashi” nghĩa là đón tiếp Khách hàng bằng cả tấm lòng với tác phong, phong cách làm việc chuyên
-        nghiệp đạt đến sự tinh tế. Đó là sự quan tâm bằng cả trái tim, luôn đặt mình vào vị trí vào Khách hàng, đứng
-        trên quan điểm của Khách hàng, quan tâm và để ý đến <span class='text-blue'>TỪNG HÀNH VI NHỎ NHẤT</span> và hành
-        động <span class="text-blue">TRƯỚC & NHANH</span>, giúp Khách hàng luôn có trải nghiệm tuyệt vời với dịch vụ
-        doanh nghiệp cung cấp, và trở
-        thành Khách hàng thân thiết.
-        <br>
-        <br>
-        Với đội ngũ Trainer / Coach & tư vấn viên làm việc nhiều năm về chăm sóc Khách hàng, dịch vụ tại nhiều tập đoàn
-        lớn Nhật Bản, chúng tôi am hiểu về các chuẩn mực, tinh thần dịch vụ Omotenashi. Qua đó, chúng tôi cam kết cung
-        cấp các khoá tư vấn riêng biệt về dịch vụ Omotenashi chuẩn Nhật Bản, có sự điều chỉnh linh hoạt với chính sác
-        dịch vụ chăm sóc dịch vụ Khách hàng của doanh nghiệp, với mục đích cuối cùng là cùng nhau nâng tầm dịch vụ chăm
-        sóc Khách hàng của doanh nghiệp theo tinh thần Omotenashi.
-        <br>
-        <br>
-      </p>
-      <br>
-      <div class="img-center"><img src="./assets/img/CSKH.png" alt=""></div>
-      <br>
-      <br></br>
+        <div class="col-12 col-sm-6 course-item-cover">
+          <div class="course-item">
+            <div class="course-left">
+              <div class="price"><span>01</span></div>
+
+            </div>
+            <div class="course-right">
+              <h4 class="title">Nâng cao</h4>
+              <p class="content">Dịch vụ chăm sóc Khách hàng chuyên nghiệp với thái độ tận tuỵ theo chuẩn dịch vụ
+                Omotenashi</p>
+
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-sm-6 course-item-cover">
+          <div class="course-item">
+            <div class="course-left">
+              <div class="price"><span>02</span></div>
+
+            </div>
+            <div class="course-right">
+              <h4 class="title">Kỹ năng</h4>
+              <p class="content">Bán hàng theo chuẩn dịch vụ Omotenashi</p>
+
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-sm-6 course-item-cover">
+          <div class="course-item">
+            <div class="course-left">
+              <div class="price"><span>03</span></div>
+
+            </div>
+            <div class="course-right">
+              <h4 class="title">Xử lý</h4>
+              <p class="content">Phàn nàn khách hàng theo chuẩn dịch vụ Omotenashi</p>
+
+            </div>
+          </div>
+        </div>
+
+        <div class="col-12 col-sm-6 course-item-cover">
+          <div class="course-item">
+            <div class="course-left">
+              <div class="price"><span>04</span></div>
+
+            </div>
+            <div class="course-right">
+              <h4 class="title">Xây dựng</h4>
+              <p class="content">Văn hoá phục vụ khách hàng Omotenashi, mang lại trải nghiệm tuyệt vời cho Khách hàng
+                theo chuẩn dịch vụ Omotenashi</p>
+
+            </div>
+          </div>
+        </div>
+      </div>
+
     </div>
   </section>
   <!--================== S-PRICING END ==================-->
