--- a/educationBusiness.html
+++ b/educationBusiness.html
@@ -114,53 +114,162 @@
 
         <div class="col-md-6 col-12">
           <img src="./assets/img/EduBusiness_text.png" class="img-center" alt="">
-
-          <!-- <p class="text-break">
-            Một doanh nghiệp phát triển bền vững cần xây dựng – triển khai - duy trì hệ thống và quy trình tiên tiến để
-            kaizen / cải thiện hiệu suất bên cạnh việc gìn giữ các giá trị cốt lõi.
-            Dịch vụ tư vấn doanh nghiệp của chúng tôi không chỉ hỗ trợ Doanh nghiệp về cung cấp các giải pháp xây dựng –
-            phát triển hệ thống và quy trình làm việc mà chúng tôi còn giúp khách hàng xây dựng phần “cốt lõi” của doanh
-            nghiệp, giúp gắn kết & giữ chân nhân tài đồng hành cùng sự phát triển của doanh nghiệp.
-            <br>
-            <br>
-            Với vai trò nhà tư vấn, chúng tôi cam kết -<span class='title uppercase text-blue'> SỰ PHÁT TRIỂN CỦA KHÁCH
-              HÀNG
-              CHÍNH LÀ SỰ PHÁT TRIỂN CỦA CHÚNG TÔI.</span>
-            <br>
-            <br>
-            Chúng tôi có đội ngũ tư vấn viên hiểu biết sâu rộng về các lĩnh vực quản trị nguồn nhân lực, đặc biệt giao
-            tiếp
-            lưu loát bằng tiếng Nhật, am hiểu văn hoá, phương thức làm việc, tư duy, v.v..v làm việc theo phong cách
-            Nhật
-            Bản, cam kết luôn tận tụy với công việc tư vấn, nhằm mang lại thành công đến doanh nghiệp.
-
-          </p> -->
         </div>
       </div>
 
 
-
       <br>
-      <!-- <h6>Dịch vụ của chúng tôi: </h6>
-      <ol>
-        <li>1. Xây dựng – triển khai – duy trì văn hoá doanh nghiệp</li>
-        <li>2. Xây dựng – triển khai – duy trì giá trị cốt lõi doanh nghiệp</li>
-        <li>3. Xây dựng văn hoá học hỏi và phát triển tổ chức (LOD)</li>
-        <li>4. Khảo sát mức độ hài lòng Nhân viên (ES)</li>
-        <li>5. Chuẩn hoá  quy trình làm việc, bảng mô tả công việc</li>
-        <li>6. Xây dựng lộ trình phát trình nghề nghiệp (career path) cho Nhân viên</li>
-        <li>7. Xây dựng KPI</li>
-        <li>8. Xây dựng thang bảng lương </li>
-        <li>9. Xây dựng khung năng lực làm việc </li>
-        <li>10. Coaching 1:1, phát triển Nhân lực chủ chốt</li>
-      </ol> -->
-      <div class="img-center"><img src="./assets/img/aboutService.png" alt=""></div>
+      <h4 class="title-line">Dịch vụ của chúng tôi</h4>
+      <div class="row courses-cover">
+
+        <div class="col-12 col-sm-6 course-item-cover">
+          <div class="course-item">
+            <div class="course-left">
+              <div class="price"><span>01</span></div>
+
+            </div>
+            <div class="course-right">
+              <h4 class="title">Xây dựng</h4>
+              <p class="content">Triển khai - duy trì văn hoá doanh nghiệp</p>
+
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-sm-6 course-item-cover">
+          <div class="course-item">
+            <div class="course-left">
+              <div class="price"><span>02</span></div>
+
+            </div>
+            <div class="course-right">
+              <h4 class="title">Xây dựng</h4>
+              <p class="content">Triển khai - duy trì giá trị cốt lỗi doanh nghiệp </p>
+
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-sm-6 course-item-cover">
+          <div class="course-item">
+            <div class="course-left">
+              <div class="price"><span>03</span></div>
+
+            </div>
+            <div class="course-right">
+              <h4 class="title">Xây dựng</h4>
+              <p class="content">Văn hoá học hỏi và phát triển tổ chức (LOD)</p>
+
+            </div>
+          </div>
+        </div>
+
+        <div class="col-12 col-sm-6 course-item-cover">
+          <div class="course-item">
+            <div class="course-left">
+              <div class="price"><span>04</span></div>
+
+            </div>
+            <div class="course-right">
+              <h4 class="title">Khảo sát</h4>
+              <p class="content">Mức độ hài lòng của nhân viên (ES)</p>
+
+            </div>
+          </div>
+        </div>
+
+        <div class="col-12 col-sm-6 course-item-cover">
+          <div class="course-item">
+            <div class="course-left">
+              <div class="price"><span>05</span></div>
+
+            </div>
+            <div class="course-right">
+              <h4 class="title">Chuẩn hoá</h4>
+              <p class="content">Quy trình làm việc, bảng mô tả công việc</p>
+
+            </div>
+          </div>
+        </div>
+
+        <div class="col-12 col-sm-6 course-item-cover">
+          <div class="course-item">
+            <div class="course-left">
+              <div class="price"><span>06</span></div>
+
+            </div>
+            <div class="course-right">
+              <h4 class="title">Xây dựng</h4>
+              <p class="content">Lộ trình phát triển nghề nghiệp [career path] cho Nhân viên</p>
+
+            </div>
+          </div>
+        </div>
+
+        <div class="col-12 col-sm-6 course-item-cover">
+          <div class="course-item">
+            <div class="course-left">
+              <div class="price"><span>07</span></div>
+
+            </div>
+            <div class="course-right">
+              <h4 class="title">Xây dựng KPI</h4>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-12 col-sm-6 course-item-cover">
+          <div class="course-item">
+            <div class="course-left">
+              <div class="price"><span>08</span></div>
+
+            </div>
+            <div class="course-right">
+              <h4 class="title">Xây dựng</h4>
+              <p class="content">Thang bảng lương</p>
+
+            </div>
+          </div>
+        </div>
+
+        <div class="col-12 col-sm-6 course-item-cover">
+          <div class="course-item">
+            <div class="course-left">
+              <div class="price"><span>09</span></div>
+
+            </div>
+            <div class="course-right">
+              <h4 class="title">Xây dựng</h4>
+              <p class="content">Khung năng lực làm việc</p>
+
+            </div>
+          </div>
+        </div>
+
+        <div class="col-12 col-sm-6 course-item-cover">
+          <div class="course-item">
+            <div class="course-left">
+              <div class="price"><span>10</span></div>
+
+            </div>
+            <div class="course-right">
+              <h4 class="title">Coachng 1:1</h4>
+              <p class="content">Phát triển Nhân lực chủ chốt</p>
+
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- <div class="img-center"><img src="./assets/img/aboutService.png" alt=""></div> -->
       <br>
       <br></br>
     </div>
   </section>
   <!--================== S-PRICING END ==================-->
 
+  <section>
+    <div class="container">
+
+    </div>
+  </section>
 
   <!--================== S-LATEST-NEWS ==================-->
   <section class="s-latest-news">
