--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <li><a href="seminor.html" class='text-center'>Hội thảo</a></li>
                 <li><a href="educationBusiness.html" class='text-center'>Tư vấn Doanh Nghiệp</a></li>
                 <li><a href="CSKH.html" class='text-center'>Tư vấn CSKH </a></li>
-                <li><a href="CSKH.html" class='text-center'>Xúc tiến Thương mại</a></li>
+                <li><a href="XTTM.html" class='text-center'>Xúc tiến Thương mại</a></li>
                 <li><a href="TVTD.html" class='text-center w-110'>Tư vấn tuyển dụng</a></li>
 
                 <li><a href="contacts.html">Liên hệ</a></li>
@@ -105,7 +105,7 @@
     <div class="main-slider-two">
       <div class="main-slide-two">
         <div class="main-slider-bg" style="background-image: url(assets/img/bg-slider-home2.svg)"></div>
-        <img class="img-slide" src="assets/img/home-2-slide-4.png" alt="img" />
+        <img class="img-slide" src="assets/img/businessManner-bg.jpeg" alt="img" />
         <div class="container">
           <div class="main-slide-item">
             <!-- <div class="date-slide">January 17, 2019 / Washington DC</div> -->
@@ -124,7 +124,7 @@
       <div class="main-slide-two">
 
         <div class="main-slider-bg" style="background-image: url(assets/img/bg-slider-home2.svg)"></div>
-        <img class="img-slide" src="assets/img/home-2-slide-6.png" alt="img" />
+        <img class="img-slide" src="assets/img/compliance_bg.png" alt="img" />
         <div class="container">
           <div class="main-slide-item">
             <!-- <div class="date-slide">January 17, 2019 / Washington DC</div> -->
@@ -144,7 +144,7 @@
       <div class="main-slide-two">
 
         <div class="main-slider-bg" style="background-image: url(assets/img/bg-slider-home2.svg)"></div>
-        <img class="img-slide" src="assets/img/home-2-slide-5.png" alt="img" />
+        <img class="img-slide" src="assets/img/basicWork_bg.jpeg" alt="img" />
         <div class="container">
           <div class="main-slide-item">
             <!-- <div class="date-slide">January 17, 2019 / Washington DC</div> -->
@@ -164,7 +164,7 @@
       <div class="main-slide-two">
 
         <div class="main-slider-bg" style="background-image: url(assets/img/bg-slider-home2.svg)"></div>
-        <img class="img-slide" src="assets/img/home-2-slide-7.png" alt="img" />
+        <img class="img-slide" src="assets/img/thumb04.png" alt="img" />
         <div class="container">
           <div class="main-slide-item">
             <!-- <div class="date-slide">January 17, 2019 / Washington DC</div> -->
@@ -184,7 +184,7 @@
       <div class="main-slide-two">
 
         <div class="main-slider-bg" style="background-image: url(assets/img/bg-slider-home2.svg)"></div>
-        <img class="img-slide" src="assets/img/home-2-slide-8.png" alt="img" />
+        <img class="img-slide" src="assets/img/HRS_bg.jpg" alt="img" />
         <div class="container">
           <div class="main-slide-item">
             <!-- <div class="date-slide">January 17, 2019 / Washington DC</div> -->
@@ -202,7 +202,7 @@
       <div class="main-slide-two">
 
         <div class="main-slider-bg" style="background-image: url(assets/img/bg-slider-home2.svg)"></div>
-        <img class="img-slide" src="assets/img/home-2-slide-9.png" alt="img" />
+        <img class="img-slide" src="assets/img/teamwork_bg.png" alt="img" />
         <div class="container">
           <div class="main-slide-item">
             <!-- <div class="date-slide">January 17, 2019 / Washington DC</div> -->
@@ -223,7 +223,7 @@
       <div class="main-slide-two">
 
         <div class="main-slider-bg" style="background-image: url(assets/img/bg-slider-home2.svg)"></div>
-        <img class="img-slide" src="assets/img/home-2-slide-10.png" alt="img" />
+        <img class="img-slide" src="assets/img/timeMan_bg.jpeg" alt="img" />
         <div class="container">
           <div class="main-slide-item">
             <!-- <div class="date-slide">January 17, 2019 / Washington DC</div> -->
@@ -243,12 +243,12 @@
       <div class="main-slide-two">
 
         <div class="main-slider-bg" style="background-image: url(assets/img/bg-slider-home2.svg)"></div>
-        <img class="img-slide" src="assets/img/home-2-slide-15.png" alt="img" />
+        <img class="img-slide" src="assets/img/communication_bg2.png" alt="img" />
         <div class="container">
           <div class="main-slide-item">
             <!-- <div class="date-slide">January 17, 2019 / Washington DC</div> -->
             <h2 style="font-size: 38px">
-              Kỹ năng giao tiếp <br> (Communication Skills)
+              Kỹ năng giao tiếp hiệu quả<br> (Communication Skills)
             </h2>
             <div class="slide-btn-cover">
               <div class="block-QR">
@@ -263,7 +263,7 @@
       <div class="main-slide-two">
 
         <div class="main-slider-bg" style="background-image: url(assets/img/bg-slider-home2.svg)"></div>
-        <img class="img-slide" src="assets/img/home-2-slide-14.png" alt="img" />
+        <img class="img-slide" src="assets/img/peak_bg.jpeg" alt="img" />
         <div class="container">
           <div class="main-slide-item">
             <!-- <div class="date-slide">January 17, 2019 / Washington DC</div> -->
@@ -283,7 +283,7 @@
       <div class="main-slide-two">
 
         <div class="main-slider-bg" style="background-image: url(assets/img/bg-slider-home2.svg)"></div>
-        <img class="img-slide" src="assets/img/home-2-slide-12.png" alt="img" />
+        <img class="img-slide" src="assets/img/logic_bg3.png" alt="img" />
         <div class="container">
           <div class="main-slide-item">
             <!-- <div class="date-slide">January 17, 2019 / Washington DC</div> -->
@@ -303,7 +303,27 @@
       <div class="main-slide-two">
 
         <div class="main-slider-bg" style="background-image: url(assets/img/bg-slider-home2.svg)"></div>
-        <img class="img-slide" src="assets/img/home-2-slide-13.png" alt="img" />
+        <img class="img-slide" src="assets/img/present_bg.jpeg" alt="img" />
+        <div class="container">
+          <div class="main-slide-item">
+            <!-- <div class="date-slide">January 17, 2019 / Washington DC</div> -->
+            <h2 style="font-size: 38px">
+              Kỹ năng thuyết trình <br> Presentation Skills
+            </h2>
+            <div class="slide-btn-cover">
+              <div class="block-QR">
+                <a href="" class=""><img src="./assets/img/QR-demo.png" class='img-code' alt="">
+                </a>
+              </div>
+              <a href="./presentationSkill.html" class="btn btn-border">Xem thêm</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="main-slide-two">
+
+        <div class="main-slider-bg" style="background-image: url(assets/img/bg-slider-home2.svg)"></div>
+        <img class="img-slide" src="assets/img/leadership_bg.jpeg" alt="img" />
         <div class="container">
           <div class="main-slide-item">
             <!-- <div class="date-slide">January 17, 2019 / Washington DC</div> -->
@@ -324,7 +344,7 @@
       <div class="main-slide-two">
 
         <div class="main-slider-bg" style="background-image: url(assets/img/bg-slider-home2.svg)"></div>
-        <img class="img-slide" src="assets/img/home-2-slide-17.png" alt="img" />
+        <img class="img-slide" src="assets/img/delegation_bg.jpeg" alt="img" />
         <div class="container">
           <div class="main-slide-item">
             <!-- <div class="date-slide">January 17, 2019 / Washington DC</div> -->
@@ -345,14 +365,14 @@
       <div class="main-slide-two">
 
         <div class="main-slider-bg" style="background-image: url(assets/img/bg-slider-home2.svg)"></div>
-        <img class="img-slide" src="assets/img/home-2-slide-18.png" alt="img" />
+        <img class="img-slide" src="assets/img/motivation_bg.jpeg" alt="img" />
         <div class="container">
           <div class="main-slide-item">
             <!-- <div style="padding: 50px" class="date-slide">
                 January 17, 2019 / Washington DC
               </div> -->
             <h2 style="font-size: 38px">
-              Giao tiếp tạo động lực<br>(Communication Skills)
+              Giao tiếp truyền cảm hứng<br>(Motivational communication)
             </h2>
 
             <div class="slide-btn-cover">
@@ -368,12 +388,12 @@
       <div class="main-slide-two">
 
         <div class="main-slider-bg" style="background-image: url(assets/img/bg-slider-home2.svg)"></div>
-        <img class="img-slide" src="assets/img/home-2-slide-19.png" alt="img" />
+        <img class="img-slide" src="assets/img/corporate_bg.png" alt="img" />
         <div class="container">
           <div class="main-slide-item">
             <!-- <div class="date-slide">January 17, 2019 / Washington DC</div> -->
             <h2 style="font-size: 38px">
-              Quản trị doanh nghiệp
+              Quản trị doanh nghiệp <br>Successful Corporate<br> Management
 
             </h2>
 
@@ -390,7 +410,7 @@
       <div class="main-slide-two">
 
         <div class="main-slider-bg" style="background-image: url(assets/img/bg-slider-home2.svg)"></div>
-        <img class="img-slide" src="assets/img/home-2-slide-20.png " alt="img" />
+        <img class="img-slide" src="assets/img/problemSol.png" alt="img" />
         <div class="container">
           <div class="main-slide-item">
             <!-- <div class="date-slide">January 17, 2019 / Washington DC</div> -->
@@ -412,7 +432,7 @@
       <div class="main-slide-two">
 
         <div class="main-slider-bg" style="background-image: url(assets/img/bg-slider-home2.svg)"></div>
-        <img class="img-slide" src="assets/img/home-2-slide-21.png" alt="img" />
+        <img class="img-slide" src="assets/img/coaching_bg.png" alt="img" />
         <div class="container">
           <div class="main-slide-item">
             <!-- <div class="date-slide" style="padding-top: 50px">
@@ -435,7 +455,7 @@
       <div class="main-slide-two">
 
         <div class="main-slider-bg" style="background-image: url(assets/img/bg-slider-home2.svg)"></div>
-        <img class="img-slide" src="assets/img/home-2-slide-23.png" alt="img" />
+        <img class="img-slide" src="assets/img/trainer_bg1.jpeg" alt="img" />
         <div class="container">
           <div class="main-slide-item">
             <!-- <div class="date-slide" style="padding-top: 50px">
@@ -458,7 +478,30 @@
       <div class="main-slide-two">
 
         <div class="main-slider-bg" style="background-image: url(assets/img/bg-slider-home2.svg)"></div>
-        <img class="img-slide" src="assets/img/home-2-slide-24.png" alt="img" />
+        <img class="img-slide" src="assets/img/conflict_bg.jpeg" alt="img" />
+        <div class="container">
+          <div class="main-slide-item">
+            <!-- <div class="date-slide" style="padding-top: 50px">
+                January 17, 2019 / Washington DC
+              </div> -->
+            <h2 style="font-size: 38px">
+              Giải quyết mâu thuẫn <br> (Resolving Conflicts at Work)
+            </h2>
+
+            <div class="slide-btn-cover">
+              <div class="block-QR">
+                <a href="" class=""><img src="./assets/img/QR-demo.png" class='img-code' alt="">
+                </a>
+              </div>
+              <a href="./resolvingConflicts.html" class="btn btn-border">Xem thêm</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="main-slide-two">
+
+        <div class="main-slider-bg" style="background-image: url(assets/img/bg-slider-home2.svg)"></div>
+        <img class="img-slide" src="assets/img/meeting_bg.jpeg" alt="img" />
         <div class="container">
           <div class="main-slide-item">
             <!-- <div class="date-slide" style="padding-top: 50px">
@@ -481,7 +524,7 @@
       <div class="main-slide-two">
 
         <div class="main-slider-bg" style="background-image: url(assets/img/bg-slider-home2.svg)"></div>
-        <img class="img-slide" src="assets/img/home-2-slide-25.png" alt="img" />
+        <img class="img-slide" src="assets/img/claimShooting_bg.jpeg" alt="img" />
         <div class="container">
           <div class="main-slide-item">
             <!-- <div class="date-slide">January 17, 2019 / Washington DC</div> -->
@@ -502,14 +545,14 @@
       <div class="main-slide-two">
 
         <div class="main-slider-bg" style="background-image: url(assets/img/bg-slider-home2.svg)"></div>
-        <img class="img-slide" src="assets/img/home-2-slide-26.png" alt="img" />
+        <img class="img-slide" src="assets/img/CSKH_bg.png" alt="img" />
         <div class="container">
           <div class="main-slide-item">
             <!-- <div class="date-slide" style="padding-top: 50px">
                 January 17, 2019 / Washington DC
               </div> -->
             <h2 style="font-size: 38px">
-              Chăm sóc Khách hàng <br> Omotenashi
+              Chăm sóc Khách hàng <br> bằng tinh thần Omotenashi
             </h2>
 
             <div class="slide-btn-cover">
